add building types